# polymarket-fetcher

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DATA_MODEL.md  README.md  config.yaml  pyproject.toml
.claude/: settings.local.json
src/pm_fetcher/: __init__.py  __main__.py  backfill.py  config.py  main.py  state.py
src/pm_fetcher/clients/: __init__.py  base_http.py  clob.py  data_api.py  gamma.py  rate_limiter.py
src/pm_fetcher/pollers/: base_poller.py  clob_poller.py  data_poller.py  market_discovery.py  metadata_poller.py
src/pm_fetcher/storage/: compactor.py  json_writer.py  schema.py
src/pm_fetcher/utils/: clock.py  logging.py
src/pm_fetcher/websockets/: base_ws.py  market_ws.py  rtds_ws.py  sports_ws.py
tests/: conftest.py  test_base_ws.py  test_compactor.py  test_json_writer.py  test_market_ws.py  test_sports_ws.py  test_state.py
