[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pm-fetcher"
version = "0.1.0"
description = "Persistent data fetcher for Polymarket public APIs"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "polars>=1.0,<2",
    "orjson>=3.9,<4",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "structlog>=24.1",
    "tenacity>=8.2,<10",
    "pyyaml>=6.0,<7",
]

[project.scripts]
pm-fetcher = "pm_fetcher.main:cli_entry"
pm-backfill = "pm_fetcher.backfill:cli_entry"

[tool.hatch.build.targets.wheel]
packages = ["src/pm_fetcher"]

[tool.hatch.build.targets.sdist]
include = ["src/pm_fetcher"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
